# visionscan

./: .gitignore  README.md  main.py  pyproject.toml  run.bat  run.sh
app/: camera_thread.py  detector.py  main_window.py  settings_dialog.py  ui_components.py
screenshot/: .gitkeep
